--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   },
   "dependencies": {
     "@nuxtjs/color-mode": "^3.5.2",
+    "@nuxtjs/robots": "5.2.2",
+    "@nuxtjs/sitemap": "7.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "lucide-vue-next": "^0.474.0",
@@ -24,6 +26,7 @@
   },
   "devDependencies": {
     "@nuxt/icon": "^1.10.3",
+    "@nuxt/image": "^1.9.0",
     "@nuxtjs/tailwindcss": "^6.13.1",
     "shadcn-nuxt": "^0.11.3"
   }
